Fix thumbnails on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ nav > ul > li > a:hover {
 
 
 #projectList img {
-    max-width: none;
+    max-width: 100%;
     margin: 0;
 }
 
